# Chrultrabook-Tools

./: .gitignore  App.xaml  App.xaml.cs  Cargo.toml  EC-Controller WPF.csproj  EC-Controller WPF.sln  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  README.md  angular.json  default.nix  flake.nix  index.html  linux_appimage.sh  linux_build.sh  main.js  package-lock.json  package.json  script.js  shell.nix  splashscreen.html  tsconfig.app.json  tsconfig.json  vite.config.js  vite.config.js.timestamp-1698327136900-9818aacf71e81.mjs  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build-linux-appimage.yml  build-linux.yml  build-macOS.yml  build-windows.yml  ci.yaml  github-actions-demo.yml  nix.yml  release.yml
Linux/: 99-cros-ec.rules  linuxSetup.sh
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
app/: index.html  script.js  style.css
app/Dashboard/: ectool.js  index.html  style.index.css
app/Fan Control/: fancontrol.html  fancontrol.js  style.fancontrol.css
app/about/: info.html
app/cbmem/: cbmem.html  style.cbmem.css
app/ectools/: cbmem.js  cpuTemp.js  fanRPM.js  setFanAuto.js  setFanMaxSpeed.js  setFanOff.js  setev.js
app/fanControl/: fancontrol.html  style.fancontrol.css
app/information/: info.html  style.info.css
app/systemInformation/: biosVersion.js  boardName.js  cores.js  cpuName.js  hostname.js  os.js
backend/: preload.js  systeminfo.js
linux/: AppRun  linuxSetup.sh
resources/: linux_appimage_build.sh  linux_build.sh
src/: custom-theme.scss  global.d.ts  index.html  main.js  main.ts  styles.css  styles.css.map  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/arch/: PKGBUILD  chrultrabook_tools.install
src-tauri/assets/: cbmem
src-tauri/capabilities/: linux.json  macOS.json  windows.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: deb_postinstall.sh  deb_postremove.sh  deb_preinstall.sh  rpm_postremove.sh  rpm_preinstall.sh
src-tauri/src/: activity_light.rs  clipboard.rs  copy.rs  custom_fan.rs  dev.doc  ectool  execute.rs  get_all_windows.rs  helper.rs  kb_def.rs  keyboard_remap.rs  main.rs  open_window.rs  save.rs  save_to_files.rs  save_to_local.rs  temps.rs
src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.config.ts  app.module.ts  app.routes.ts  interval.service.spec.ts  interval.service.ts
src/app/button/: button.component.html  button.component.scss  button.component.ts
src/app/custom-fan/: chart.js  custom-fan.component.html  custom-fan.component.scss  custom-fan.component.spec.ts  custom-fan.component.ts
src/app/custom-fan/fan-curves/: fan-curves.component.html  fan-curves.component.scss  fan-curves.component.spec.ts  fan-curves.component.ts
src/app/custom-fan/fan-data/: fan-data.component.html  fan-data.component.scss  fan-data.component.spec.ts  fan-data.component.ts
src/app/dashboard/: dashboard.component.html
src/app/diagnostics/: diagnostics.component.html  diagnostics.component.scss  diagnostics.component.spec.ts  diagnostics.component.ts
src/app/fan-controls/: fan-controls.component.html  fan-controls.component.spec.ts  fan-controls.component.ts
src/app/fancontrol/: fancontrol.component.html  fancontrol.component.ts
src/app/home/: app.component.css  app.component.html  app.component.scss  app.component.ts  home.component.html  home.component.scss  home.component.spec.ts  home.component.ts
src/app/home/button/: button.component.ts  (+1 more)
src/app/keyboard-extra/: keyboard-extra.component.html  keyboard-extra.component.scss  keyboard-extra.component.spec.ts  keyboard-extra.component.ts
src/app/services/: fan.service.spec.ts  fan.service.ts  profiles.ts
src/app/settings/: settings.component.html  settings.component.scss  settings.component.spec.ts  settings.component.ts
src/app/side-nav/: side-nav.component.css  side-nav.component.html  side-nav.component.spec.ts  side-nav.component.ts
src/app/sidenav/: nav-data.ts  sidenav.component.html  sidenav.component.ts
src/app/system-controls/: system-controls.component.html  system-controls.component.spec.ts  system-controls.component.ts
src/app/system-info/: system-info.component.html  system-info.component.spec.ts  system-info.component.ts
src/app/system-information/: system-information.component.html  system-information.component.ts
src/components/: fancurves.js  menu.js
src/public/: splashscreen.html
src/types/: chartjs-plugin-dragdata.d.ts
(+32 files in other folders)
