[package]
name = "Chrultrabook-Tools"
version = "3.0.0"
description = "Chrultrabook Hardware Controller"
authors = ["Robinson Arysseril"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-cli = "1.5.14"
tauri-plugin-shell = "2.0.0-beta.5"
tauri-plugin-clipboard-manager = "2.1.0-beta.4"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-fs = "2.0.0-beta.9"
web-local-storage-api = "0.0.0"
hidapi = "2.6.1"
open = "5.1.4"
elevate = "0.6.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2.0.0-beta.7"
tauri-plugin-single-instance = "2.0.0-beta.9"


[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
